run fix on notebook

--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8b4a21be-6871-4ae4-bc0e-dee65dd86cd2",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -20,6 +21,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "670a4337-f014-4319-b9c0-1ca9f251d17d",
    "metadata": {
     "tags": [
      "version-info"
@@ -40,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e47193d-d728-4380-8bab-0ca96748f3c5",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -47,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abb06c43-f2c1-479b-9897-feff83336a22",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -60,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e49a5549-8697-4db4-b68d-7f698ef75f26",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -73,6 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a9d70e47-b52a-4d85-ad02-349079418d7c",
    "metadata": {
     "scrolled": false
    },
@@ -95,9 +101,9 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService(\n",
-    "    channel=\"ibm_cloud\", \n",
-    "    token=\"MY_IBM_CLOUD_API_KEY\", \n",
-    "    instance=\"MY_IBM_CLOUD_CRN\"\n",
+    "    channel=\"ibm_cloud\",\n",
+    "    token=\"MY_IBM_CLOUD_API_KEY\",\n",
+    "    instance=\"MY_IBM_CLOUD_CRN\",\n",
     ")\n",
     "\n",
     "service.backends()"
@@ -105,6 +111,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f662e5f6-7777-44be-a0fd-05b6d359bcdf",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -113,6 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "c1a0109f-474b-4c23-9d6e-e2049d331092",
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +140,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "783d04b0-4b4e-471b-b3ec-e55a9bd8654e",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -148,6 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "c6770315-bb8a-4792-8362-c5b5ce6bec35",
    "metadata": {},
    "outputs": [
     {
@@ -169,6 +179,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9748b05-90a4-497c-bc45-ce4651aa876a",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -177,6 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "9c0629d0-c744-463d-94af-98dab6c34a6a",
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +208,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92bf3922-74d0-43af-bc49-f84318339675",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -208,6 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "f2043f87-7ba8-4e05-8cfd-5abb97ec7988",
    "metadata": {},
    "outputs": [
     {
@@ -233,6 +247,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32279902-9d7e-4c1b-953d-dd1fe596e312",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -240,6 +255,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae167f44-7e07-490c-a7f4-9e8f4757162b",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -258,7 +274,7 @@
     "\n",
     "- `frequency`: This parameter specifies the resonant frequency of the qubit, indicating the energy difference between the $|0\\rangle$ and $|1\\rangle$ states, expressed in hertz (Hz).\n",
     "\n",
-    "- `anharmonicity`: Anharmonicity is the difference in energy between the first and second excited states of the qubit, also expressed in hertz (Hz). \n",
+    "- `anharmonicity`: Anharmonicity is the difference in energy between the first and second excited states of the qubit, also expressed in hertz (Hz).\n",
     "\n",
     "- `readout_error`: The readout error quantifies the average probability of incorrectly measuring a qubit's state. It is commonly calculated as the mean of prob_meas0_prep1 and prob_meas1_prep0, providing a single metric for measurement fidelity.\n",
     "\n",
@@ -272,6 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "ad072ccd-4a8e-4c14-8320-dde9c7ac9767",
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "ea7dfcfc-2f64-4776-b28c-88b6d9c30ff0",
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "5db6737c-5bf5-4c6e-97f9-3564ee0feba3",
    "metadata": {},
    "outputs": [
     {
@@ -375,6 +394,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e230d5e2-7ae2-48e8-9995-c4628f4ae1b0",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -385,6 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "f869dfee-6b49-46fd-b787-0ecea9021165",
    "metadata": {},
    "outputs": [
     {
@@ -404,6 +425,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03872139-8751-42ad-8877-8dcb350b4a9f",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -412,6 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "56a7f685-6e78-4fb3-9161-c68e3f45dd68",
    "metadata": {},
    "outputs": [
     {
@@ -431,6 +454,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f76b0ea-c3fd-492a-9326-d417966e28d4",
    "metadata": {},
    "source": [
     "## Next steps\n",
