--- a/docs/guides/colibri-td-pde.ipynb
+++ b/docs/guides/colibri-td-pde.ipynb
@@ -316,7 +316,7 @@
     "    cstride=26,\n",
     "    alpha=0.3,\n",
     ")\n",
-    "ax.scatter(t_unit * 5, x, solution, marker=\".\")\n",
+    "ax.scatter(t * 5, x, solution, marker=\".\")\n",
     "ax.set(xlabel=\"t\", ylabel=\"x\", zlabel=\"u(t,x)\")\n",
     "\n",
     "plt.show()"
