--- a/docs/guides/colibri-td-pde.ipynb
+++ b/docs/guides/colibri-td-pde.ipynb
@@ -5,23 +5,39 @@
    "id": "f7d9993f",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore Colibri  */}"
+    "{/* cspell:ignore CMAES, Hypoelastic, edgecolor, royalblue, rstride, cstride */}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dde95705",
+   "id": "2f87f5f0",
    "metadata": {},
    "source": [
     "# QUICK-PDE: A Qiskit Function by ColibriTD\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "  Qiskit Functions are an experimental feature available to IBM Quantum&reg; Premium Plan and Flex Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "\n",
+    "</Admonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91edceeb",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dde95705",
+   "metadata": {},
+   "source": [
     "## Overview\n",
     "\n",
-    "The **P**artial **D**ifferential **E**quation solver presented here is part of our **Qu**antum **I**novative **C**omputing **K**it platform (QUICK-PDE), and is packaged as a Qiskit Function. With the QUICK-PDE function, you can solve domain-specific partial differential equations on IBM Quantum QPUs. This function is based on the algorithm described in [ColibriTD's H-DES description paper.](https://arxiv.org/abs/2410.01130) This algorithm can solve complex multi-physics problems,starting with Computational Fluid Dynamics (CFD) and Materials Deformation (MD), and other use cases coming soon. The details of these use cases are given in the [Use cases](#use-cases) section.\n",
+    " The Partial Differential Equation (PDE) solver presented here is part of our Quantum Innovative Computing Kit (QUICK) platform (QUICK-PDE), and is packaged as a Qiskit Function. With the QUICK-PDE function, you can solve domain-specific partial differential equations on IBM Quantum QPUs. This function is based on the algorithm described in [ColibriTD's H-DES description paper.](https://arxiv.org/abs/2410.01130) This algorithm can solve complex multi-physics problems,starting with Computational Fluid Dynamics (CFD) and Materials Deformation (MD), and other use cases coming soon. The details of these use cases are given in the [Use cases](#use-cases) section.\n",
     "\n",
     "To tackle the differential equations, the trial solutions are encoded as linear combinations of orthogonal functions (typically Chebyshev polynomials, and more specifically $2^n$ of them where $n$ is the number of qubits encoding your function), parametrized by the angles of a Variable Quantum Circuit (VQC). The ansatz generates a state encoding the function, which is evaluated by observables whose combinations allow for evaluating the function at all points. You can then evaluate the loss function in which the differential equations are encoded, and fine-tune the angles in a hybrid loop, as shown in the following. The trial solutions get gradually closer to the actual solutions until you reach a satisfactory result.\n",
     "\n",
