--- a/docs/guides/global-data-quantum-optimizer.ipynb
+++ b/docs/guides/global-data-quantum-optimizer.ipynb
@@ -9,6 +9,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a95af5a5-933c-4f11-a841-65483946a528",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "0466d79d-52b1-4ae4-bdbe-94357784cf7f",
    "metadata": {},
