--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -34,6 +34,8 @@ The tutorials highlight techniques where repeated sampling enables estimation of
 
 * [Higher-order binary optimization with Q-CTRL's Optimization Solver](/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver)
 
+* [Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum](/docs/tutorials/global-data-quantum-optimizer)
+
 
 </details>
 
