--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -195,7 +195,7 @@
     "\n",
     "|     Name    |    Type     | Description |   Required  |\n",
     "|-------------|-------------|-------------|-------------|\n",
-    "| `action` | `string` | The name of the action from among `create`, `list`, `fit`, `predict`, `fit_predict`, `create_fit_predict` and `delete`. | Yes |\n",
+    "| `action` | `str` | The name of the action from among `create`, `list`, `fit`, `predict`, `fit_predict`, `create_fit_predict` and `delete`. | Yes |\n",
     "\n",
     "#### Usage"
    ]
@@ -233,24 +233,24 @@
     "\n",
     "|     Name    |    Type     | Description | Required  | Default |\n",
     "|-------------|-------------|-------------|-----------|---------|\n",
-    "| `action` | `string` | The name of the action from among `create`, `list`, `fit`, `predict`, `fit_predict`, `create_fit_predict` and `delete`. | Yes | - |\n",
-    "| `name` | `string` | The name of the quantum classifier, e.g., `spam_classifier`. | Yes | - |\n",
-    "| `instance` | `string` | IBM instance. | Yes | - |\n",
-    "| `backend_name` | `string` | IBM compute resource. Default is `None`, which means the backend with the fewest pending jobs will be used. | No | `None` |\n",
-    "| `quantum_classifier` | `string` | The type of the quantum classifier, i.e., `QuantumEnhancedEnsembleClassifier`. | No | `QuantumEnhancedEnsembleClassifier` |\n",
+    "| `action` | `str` | The name of the action from among `create`, `list`, `fit`, `predict`, `fit_predict`, `create_fit_predict` and `delete`. | Yes | - |\n",
+    "| `name` | `str` | The name of the quantum classifier, e.g., `spam_classifier`. | Yes | - |\n",
+    "| `instance` | `str` | IBM instance. | Yes | - |\n",
+    "| `backend_name` | `str` | IBM compute resource. Default is `None`, which means the backend with the fewest pending jobs will be used. | No | `None` |\n",
+    "| `quantum_classifier` | `str` | The type of the quantum classifier, i.e., `QuantumEnhancedEnsembleClassifier`. | No | `QuantumEnhancedEnsembleClassifier` |\n",
     "| `num_learners` | `integer` | The number of learners in the ensemble. | No | `10` |\n",
     "| `learners_types` | `list` | Types of learners. Among supported types are: `DecisionTreeClassifier`, `GaussianNB`, `KNeighborsClassifier`, `MLPClassifier`, and `LogisticRegression`. Further details related to each can be found in the [scikit-learn documentation](https://scikit-learn.org/stable/supervised_learning.html). | No | `[DecisionTreeClassifier]` |\n",
     "| `learners_proportions` | `list` | Proportions of each learner type in the ensemble. | No | `[1.0]` |\n",
     "| `learners_options` | `list` | Options for each learner type in the ensemble. For a complete list of options corresponding to the chosen learner type/s, consult [scikit-learn documentation](https://scikit-learn.org/stable/supervised_learning.html). | No | `[{\"max_depth\": 3, \"splitter\": \"random\", \"class_weight\": None}]` |\n",
-    "| `regularization_type` | `string` or `list` | Type/s of regularization to be used: `onsite` or `alpha`. `onsite` controls the onsite term where higher values lead to sparser ensembles. `alpha` controls trade-off between interaction and onsite terms where lower values lead to sparser ensembles. If a list is provided, models will be trained for each type and the best performing one will be selected. | No | `onsite` |\n",
+    "| `regularization_type` | `str` or `list` | Type/s of regularization to be used: `onsite` or `alpha`. `onsite` controls the onsite term where higher values lead to sparser ensembles. `alpha` controls trade-off between interaction and onsite terms where lower values lead to sparser ensembles. If a list is provided, models will be trained for each type and the best performing one will be selected. | No | `onsite` |\n",
     "| `regularization` | `str` or `float` or `list` | Regularization value. Bounded between `0` and `+inf` if regularization_type is `onsite`. Bounded between `0` and `1` if regularization_type is `alpha`. If set to `auto`, auto-regularization is used - optimal regularization parameter is found by binary search with the desired ratio of selected classifiers to total classifiers (`regularization_desired_ratio`) and the upper bound for the regularization parameter (`regularization_upper_bound`). If a list is provided, models will be trained for each value and the best performing one will be selected. | No | `0.01` |\n",
     "| `regularization_desired_ratio` | `float` or `list` | Desired ratio/s of selected classifiers to total classifiers for auto-regularization. If a list is provided, models will be trained for each ratio and the best performing one will be selected. | No | `0.75` |\n",
     "| `regularization_upper_bound` | `float` or `list` | Upper bound/s for the regularization parameter when using auto-regularization. If a list is provided, models will be trained for each upper bound and the best performing one will be selected. | No | `200` |\n",
-    "| `weight_update_method` | `string` | Method for update of sample weights from among `logarithmic` and `quadratic`. | No | `logarithmic` |\n",
+    "| `weight_update_method` | `str` | Method for update of sample weights from among `logarithmic` and `quadratic`. | No | `logarithmic` |\n",
     "| `sample_scaling` | `boolean` | Whether sample scaling should be applied. | No | `False` |\n",
     "| `prediction_scaling` | `float` | Scaling factor for predictions. | No | `None` |\n",
     "| `optimizer_options` | `dictionary` | QAOA optimizer options. A list of available options is presented later in this documentation. | No | ... |\n",
-    "| `voting` | `string` | Use majority voting (`hard`) or average of probabilities (`soft`) for aggregating learners' predictions/probabilities. | No | `hard` |\n",
+    "| `voting` | `str` | Use majority voting (`hard`) or average of probabilities (`soft`) for aggregating learners' predictions/probabilities. | No | `hard` |\n",
     "| `prob_threshold` | `float` | Optimal probability threshold. | No | `0.5` |\n",
     "| `random_state` | `integer` | Control randomness for repeatability. | No | `None` |"
    ]
@@ -271,7 +271,7 @@
     "| `sparsify` | `float` | The sparsification threshold | No | `0.001` |\n",
     "| `theta` | `float` | The initial value of theta, a variational parameter of QAOA | No | `None` |\n",
     "| `simulator` | `boolean` | Whether to use a simulator or a QPU | No | `False` |\n",
-    "| `classical_optimizer` | `string` | Name of the classical optimizer for the QAOA. All solvers offered by SciPy, as enlisted [here](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html#scipy.optimize.minimize), are usable. You will need to set `classical_optimizer_options` accordingly | No | `COBYLA` |\n",
+    "| `classical_optimizer` | `str` | Name of the classical optimizer for the QAOA. All solvers offered by SciPy, as enlisted [here](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html#scipy.optimize.minimize), are usable. You will need to set `classical_optimizer_options` accordingly | No | `COBYLA` |\n",
     "| `classical_optimizer_options` | `dictionary` | Classical optimizer options. For a complete list of available options, consult [SciPy documentation](https://docs.scipy.org/doc/scipy/reference/) | No | `{\"maxiter\": 60}` |\n",
     "| `optimization_level` | `integer` | The depth of the QAOA circuit | No | `3` |\n",
     "| `num_transpiler_runs` | `integer` | Number of transpiler runs | No | `30` |\n",
@@ -343,8 +343,8 @@
     "#### Inputs\n",
     "|     Name    |    Type     | Description |   Required  |\n",
     "|-------------|-------------|-------------|-------------|\n",
-    "| `action`    | `string`    | The name of the action. Must be `delete`. | Yes |\n",
-    "| `name`      | `string`    | The name of the classifier to delete. | Yes |\n",
+    "| `action`    | `str`    | The name of the action. Must be `delete`. | Yes |\n",
+    "| `name`      | `str`    | The name of the classifier to delete. | Yes |\n",
     "\n",
     "#### Usage"
    ]
@@ -389,18 +389,18 @@
     "\n",
     "|     Name    |    Type     | Description |   Required  |\n",
     "|-------------|-------------|-------------|-------------|\n",
-    "| `action`    | `string`    | The name of the action. Must be `fit`. | Yes |\n",
-    "| `name`      | `string`    | The name of the classifier to train. | Yes |\n",
-    "| `X`         | `array` or `list` or `string` | The training data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
-    "| `y`         | `array` or `list` or `string` | The training target values. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `action`    | `str`    | The name of the action. Must be `fit`. | Yes |\n",
+    "| `name`      | `str`    | The name of the classifier to train. | Yes |\n",
+    "| `X`         | `np.array` or `list` or `str` | The training data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `y`         | `np.array` or `list` or `str` | The training target values. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
     "| `fit_params`| `dictionary`| Additional parameters to pass to the `fit` method of the classifier. | No |\n",
     "\n",
     "##### fit_params\n",
     "|     Name    |    Type     | Description |   Required  |   Default   |\n",
     "|-------------|-------------|-------------|-------------|-------------|\n",
     "| `validation_data` | `tuple` | The validation data and labels. | No | `None` |\n",
-    "| `pos_label` | `integer` or `string` | The class label to be mapped to 1. | No | `None` |\n",
-    "| `optimization_data` | `string` | Dataset to optimize the ensemble on. Can be one of: `train`, `validation`, `both`. | No | `train` |\n",
+    "| `pos_label` | `integer` or `str` | The class label to be mapped to 1. | No | `None` |\n",
+    "| `optimization_data` | `str` | Dataset to optimize the ensemble on. Can be one of: `train`, `validation`, `both`. | No | `train` |\n",
     "\n",
     "#### Usage"
    ]
@@ -448,10 +448,10 @@
     "\n",
     "|     Name    |    Type     | Description |   Required  |\n",
     "|-------------|-------------|-------------|-------------|\n",
-    "| `action`    | `string`    | The name of the action. Must be `predict`. | Yes |\n",
-    "| `name`      | `string`    | The name of the classifier to be used. | Yes |\n",
-    "| `X`         | `array` or `list` or `string` | The test data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
-    "| `options`   | `dictionary`| A dictionary containing additional options. | No |\n",
+    "| `action`    | `str`    | The name of the action. Must be `predict`. | Yes |\n",
+    "| `name`      | `str`    | The name of the classifier to be used. | Yes |\n",
+    "| `X`         | `np.array` or `list` or `str` | The test data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `options[\"out\"]` | `str` | The output JSON filename to save the predictions in the shared data directory. If not provided, the predictions are returned in the job result. | No |\n",
     "\n",
     "#### Usage"
    ]
@@ -505,13 +505,13 @@
     "\n",
     "|     Name    |    Type     | Description |   Required  |\n",
     "|-------------|-------------|-------------|-------------|\n",
-    "| `action`    | `string`    | The name of the action. Must be `fit_predict`. | Yes |\n",
-    "| `name`      | `string`    | The name of the classifier to be used. | Yes |\n",
-    "| `X_train`   | `array` or `list` or `string` | The training data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
-    "| `y_train`   | `array` or `list` or `string` | The training target values. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
-    "| `X_test`    | `array` or `list` or `string` | The test data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `action`    | `str`    | The name of the action. Must be `fit_predict`. | Yes |\n",
+    "| `name`      | `str`    | The name of the classifier to be used. | Yes |\n",
+    "| `X_train`   | `np.array` or `list` or `str` | The training data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `y_train`   | `np.array` or `list` or `str` | The training target values. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `X_test`    | `np.array` or `list` or `str` | The test data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
     "| `fit_params`| `dictionary`| Additional parameters to pass to the `fit` method of the classifier. | No |\n",
-    "| `options`   | `dictionary`| A dictionary containing additional options. | No |\n",
+    "| `options[\"out\"]` | `str` | The output JSON filename to save the predictions in the shared data directory. If not provided, the predictions are returned in the job result. | No |\n",
     "\n",
     "#### Usage"
    ]
@@ -569,15 +569,15 @@
     "\n",
     "| Name | Type | Description | Required |\n",
     "|------|------|-------------|-----------|\n",
-    "| `action` | `string` | The name of the action from among `create`, `list`, `fit`, `predict`, `fit_predict`, `create_fit_predict` and `delete`. | Yes |\n",
-    "| `name` | `string` | The name of the classifier to be used. | Yes |\n",
-    "| `quantum_classifier` | `string` | The type of the classifier, i.e., `QuantumEnhancedEnsembleClassifier`. Default is `QuantumEnhancedEnsembleClassifier`. | No |\n",
-    "| `X_train` | `array` or `list` or `string` | The training data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
-    "| `y_train` | `array` or `list` or `string` | The training target values. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
-    "| `X_test` | `array` or `list` or `string` | The test data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `action` | `str` | The name of the action from among `create`, `list`, `fit`, `predict`, `fit_predict`, `create_fit_predict` and `delete`. | Yes |\n",
+    "| `name` | `str` | The name of the classifier to be used. | Yes |\n",
+    "| `quantum_classifier` | `str` | The type of the classifier, i.e., `QuantumEnhancedEnsembleClassifier`. Default is `QuantumEnhancedEnsembleClassifier`. | No |\n",
+    "| `X_train` | `np.array` or `list` or `str` | The training data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `y_train` | `np.array` or `list` or `str` | The training target values. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
+    "| `X_test` | `np.array` or `list` or `str` | The test data. This can be a NumPy array, a list, or a string referencing a filename in the shared data directory. | Yes |\n",
     "| `fit_params` | `dictionary` | Additional parameters to pass to the `fit` method of the classifier. | No |\n",
     "| `options[\"save\"]` | `boolean` | Whether to save to trained classifier in the shared data directory. Default is `True`. | No |\n",
-    "| `options[\"out\"]` | `string` | The output JSON filename to save the predictions in the shared data directory. If not provided, the predictions are returned in the job result. | No |\n",
+    "| `options[\"out\"]` | `str` | The output JSON filename to save the predictions in the shared data directory. If not provided, the predictions are returned in the job result. | No |\n",
     "\n",
     "#### Usage"
    ]
