edit dates in changelog and add singularity machine learning - classification to latest updates

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -369,6 +369,12 @@ To get started, explore the [Qiskit Functions documentation.](/docs/guides/funct
 
 IBM Quantum documentation recently added a number of user-facing improvements, including content updates and new features. Many of these changes are a result of specific user requests! Check out the highlights below.
 
+**4 June 2025**
+
+- New updates
+
+  - Singularity Machine Learning - Classification
+
 **18 December 2024**
 
 - New pages
