Apply suggestions from code review

--- a/docs/tutorials/colibritd-pde.ipynb
+++ b/docs/tutorials/colibritd-pde.ipynb
@@ -34,8 +34,8 @@
     "This tutorial seeks to teach on an introductory level how to use the QUICK-PDE\n",
     "function to solve complex multi-physics problems on 156Q Heron R2 QPUs by using\n",
     "ColibriTD's H-DES (Hybrid Differential Equation Solver).\n",
-    "The underlying algorithm is described in [the H-DES paper.](https://arxiv.org/abs/2410.01130).\n",
-    "Note that this solver can also solve non-linear equation.\n",
+    "The underlying algorithm is described in [the H-DES paper.](https://arxiv.org/abs/2410.01130)\n",
+    "Note that this solver can also solve non-linear equations.\n",
     "\n",
     "Multi-physics problems - including fluids dynamics, heat diffusion, and material\n",
     "deformation, to name a few - can be ubiquitously described by Partial\n",
@@ -114,7 +114,7 @@
     "physical problem determined by the initial conditions, and the algorithmic\n",
     "component in solving a fluid dynamics example on a quantum computer.\n",
     "\n",
-    "Computational Fluid Dynamics (CFD) has a broad range of applications, thus it is\n",
+    "Computational Fluid Dynamics (CFD) has a broad range of applications, and thus it is\n",
     "important to study and solve the underlying PDEs. An important family of PDEs\n",
     "are the Navier-Stokes equations, which are a system of nonlinear partial\n",
     "differential equations describing the motion of fluids. They are highly relevant\n",
@@ -127,33 +127,33 @@
     "\n",
     "The one-dimensional version of the equation depends on two variables:\n",
     "$t \\in \\mathbb{R}_{\\geq 0}$ modeling the temporal dimension, $x \\in \\mathbb{R}$\n",
-    "representing the spatial dimension. The general form of the equation called\n",
-    "viscous Burger's equation and reads:\n",
+    "representing the spatial dimension. The general form of the equation is called\n",
+    "the viscous Burgers' equation and reads:\n",
     "\n",
     "$$\\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} = \\nu \\frac{\\partial^2 u}{\\partial^2 x},$$\n",
     "\n",
-    "$u(x,t)$ is the fluid speed field at a given position $x$ and time $t$ and $\\nu$\n",
+    "where $u(x,t)$ is the fluid speed field at a given position $x$ and time $t$, and $\\nu$\n",
     "is the viscosity of the fluid. Viscosity is an important property of a fluid\n",
-    "measuring its rate-dependent resistance to motion or deformation and thus it\n",
+    "that measures its rate-dependent resistance to motion or deformation, and thus it\n",
     "plays a crucial role in the determination of the dynamics of a fluid. When the\n",
     "viscosity of the fluid is null ($\\nu$ = 0), the equation becomes a conservation\n",
-    "equations that can develop discontinuities (shock waves), due to the lack of its\n",
-    "internal resistance. In this case, the equation is called inviscid  Burgers\n",
+    "equation that can develop discontinuities (shock waves), due to the lack of its\n",
+    "internal resistance. In this case, the equation is called the inviscid Burgers'\n",
     "equation and is a special case of nonlinear wave equation.\n",
     "\n",
     "Strictly speaking, inviscid flows do not occur in nature, but when modeling\n",
     "aerodynamic flow, due to the infinitesimal effect of transport, using an\n",
-    "inviscid description of the problem can be very useful. Surprisingly, more than\n",
-    "70% of aerodynamic theory deal with inviscid flows.\n",
+    "inviscid description of the problem can be useful. Surprisingly, more than\n",
+    "70% of aerodynamic theory deals with inviscid flows.\n",
     "\n",
-    "In this tutorial we offer the inviscid Burger equation as CFD example to solve\n",
-    "on IBM devices using QUICK-PDE, given by the equation:\n",
+    "In this tutorial we offer the inviscid Burgers' equation as a CFD example to solve\n",
+    "on IBM&reg; QPUs using QUICK-PDE, given by the equation:\n",
     "$$\\frac{\\partial u}{\\partial t} + u\\frac{\\partial u}{\\partial x} = 0, $$\n",
     "\n",
     "The initial condition for this problem is set to a linear function:\n",
     "$$u(t=0,x) = ax + b,\\text{ with }a,b\\in\\mathbb{R}$$\n",
-    "where $a$ and $b$, are arbitrary constants influencing the shape of the\n",
-    "solution. The user can play with $a$ and $b$ and see how they influence the\n",
+    "where $a$ and $b$ are arbitrary constants influencing the shape of the\n",
+    "solution. You can adjust $a$ and $b$ and see how they influence the\n",
     "solving process and the solution."
    ]
   },
