--- a/docs/tutorials/colibritd-pde.ipynb
+++ b/docs/tutorials/colibritd-pde.ipynb
@@ -120,9 +120,9 @@
     "differential equations describing the motion of fluids. They are highly relevant\n",
     "for scientific problems and engineering applications.\n",
     "\n",
-    "Under certain conditions the Navier-Stokes equations reduce to Burger's\n",
+    "Under certain conditions, the Navier-Stokes equations reduce to Burgers'\n",
     "equation, a convection–diffusion equation describing phenomena occurring in\n",
-    "fluid dynamics, gas dynamics, and nonlinear acoustic etc. Basically, it models\n",
+    "fluid dynamics, gas dynamics, and nonlinear acoustics, to name a few, by modeling\n",
     "dissipative systems.\n",
     "\n",
     "The one-dimensional version of the equation depends on two variables:\n",
