Add back version-info cell (is required)

--- a/docs/guides/colibritd-pde.ipynb
+++ b/docs/guides/colibritd-pde.ipynb
@@ -21,6 +21,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a01cc47",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "dde95705",
    "metadata": {},
