Code fixes, theoretical explanation and name simplification (#3254)
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/colibritd-pde.ipynb
+++ b/docs/guides/colibritd-pde.ipynb
@@ -21,13 +21,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "91edceeb",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a01cc47",
    "metadata": {
     "tags": [
      "version-info"
     ]
    },
+   "outputs": [],
    "source": []
   },
   {
@@ -37,11 +39,11 @@
    "source": [
     "## Overview\n",
     "\n",
-    " The Partial Differential Equation (PDE) solver presented here is part of our Quantum Innovative Computing Kit (QUICK) platform (QUICK-PDE), and is packaged as a Qiskit Function. With the QUICK-PDE function, you can solve domain-specific partial differential equations on IBM Quantum QPUs. This function is based on the algorithm described in [ColibriTD's H-DES description paper.](https://arxiv.org/abs/2410.01130) This algorithm can solve complex multi-physics problems,starting with Computational Fluid Dynamics (CFD) and Materials Deformation (MD), and other use cases coming soon.\n",
+    "The Partial Differential Equation (PDE) solver presented here is part of our Quantum Innovative Computing Kit (QUICK) platform (QUICK-PDE), and is packaged as a Qiskit Function. With the QUICK-PDE function, you can solve domain-specific partial differential equations on IBM Quantum QPUs. This function is based on the algorithm described in [ColibriTD's H-DES description paper.](https://arxiv.org/abs/2410.01130) This algorithm can solve complex multi-physics problems, starting with Computational Fluid Dynamics (CFD) and Materials Deformation (MD), and other use cases coming soon.\n",
     "\n",
     "To tackle the differential equations, the trial solutions are encoded as linear combinations of orthogonal functions (typically Chebyshev polynomials, and more specifically $2^n$ of them where $n$ is the number of qubits encoding your function), parametrized by the angles of a Variable Quantum Circuit (VQC). The ansatz generates a state encoding the function, which is evaluated by observables whose combinations allow for evaluating the function at all points. You can then evaluate the loss function in which the differential equations are encoded, and fine-tune the angles in a hybrid loop, as shown in the following. The trial solutions get gradually closer to the actual solutions until you reach a satisfactory result.\n",
     "\n",
-    "![Workflow of the QUICK-PDE function](/docs/images/guides/colibri-td-equation-solver/diagram.svg)\n",
+    "![Workflow of the QUICK-PDE function](/docs/images/guides/colibritd-equation-solver/diagram.svg)\n",
     "\n",
     "In addition to this hybrid loop, you can also chain together different optimizers. This is useful when you want a global optimizer to find a good set of angles, and then a more fine-tuned optimizer to follow a gradient to the best set of neighboring angles. In the case of computational fluid dynamics (CFD), the default optimization sequence produces the best results - but in the case of material deformation (MD), while the default provides good results, you can configure it further for problem-specific benefits.\n",
     "\n",
@@ -223,10 +225,10 @@
     "\n",
     "The following table presents statistics on various runs of our function.\n",
     "\n",
-    "| Example | Number of qubits | Initialization          | Error     | Total time (min) | Runtime usage (min) |\n",
-    "| ----------------------------------------------------- | ---------------- | ----------------------- | --------- | ---------------- | ------------------- |\n",
-    "| Inviscid Burgers' equation                              | 50               | `PHYSICALLY_INFORMED` | $10^{-2}$ | 66               | 25                  |\n",
-    "| Hypoelastic 1D tensile test                           | 18               | `RANDOM`              | $10^{-2}$ | 123              | 100                 |"
+    "| Example                      | Number of qubits | Initialization        | Error     | Total time (min) | Runtime usage (min) |\n",
+    "| ---------------------------- | ---------------- | --------------------- | --------- | ---------------- | ------------------- |\n",
+    "| Inviscid Burgers' equation   | 50               | `PHYSICALLY_INFORMED` | $10^{-2}$ | 66               | 25                  |\n",
+    "| Hypoelastic 1D tensile test  | 18               | `RANDOM`              | $10^{-2}$ | 123              | 100                 |"
    ]
   },
   {
@@ -332,7 +334,7 @@
     "    cstride=26,\n",
     "    alpha=0.3,\n",
     ")\n",
-    "ax.scatter(t * 5, x, solution, marker=\".\")\n",
+    "ax.scatter(t, x, solution[\"functions\"][\"u\"], marker=\".\")\n",
     "ax.set(xlabel=\"t\", ylabel=\"x\", zlabel=\"u(t,x)\")\n",
     "\n",
     "plt.show()"
@@ -355,7 +357,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# select the properties of your material\n",
@@ -424,7 +425,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "- Fill out the form to [request access to the QUICK-PDE function.](https://forms.office.com/e/kJzViZNVa4)\n",
-    "- Try modeling a flowing non-viscous fluid using QUICK-PDE in the [tutorial](/docs/tutorials/colibri-td-pde).\n",
+    "- Try modeling a flowing non-viscous fluid using QUICK-PDE in the [tutorial](/docs/tutorials/colibritd-pde).\n",
     "</Admonition>"
    ]
   }
