--- a/docs/tutorials/colibritd-pde.ipynb
+++ b/docs/tutorials/colibritd-pde.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Model a flowing non-viscous fluid using QUICK-PDE\n",
     "\n",
-    "{/* cspell:ignore edgecolor, royalblue, rstride, cstride */}"
+    "{/* cspell:ignore edgecolor, royalblue, rstride, cstride, Navier */}"
    ]
   },
   {
@@ -35,6 +35,7 @@
     "function to solve complex multi-physics problems on 156Q Heron R2 QPUs by using\n",
     "ColibriTD's H-DES (Hybrid Differential Equation Solver).\n",
     "The underlying algorithm is described in [the H-DES paper.](https://arxiv.org/abs/2410.01130)\n",
+    "Note that this solver can also solve non-linear equations.\n",
     "\n",
     "Multi-physics problems - including fluids dynamics, heat diffusion, and material\n",
     "deformation, to name a few - can be ubiquitously described by Partial\n",
@@ -113,13 +114,47 @@
     "physical problem determined by the initial conditions, and the algorithmic\n",
     "component in solving a fluid dynamics example on a quantum computer.\n",
     "\n",
-    "The CFD example here is the inviscid Burgers' equation,\n",
-    "given by the equation:\n",
+    "Computational Fluid Dynamics (CFD) has a broad range of applications, and thus it is\n",
+    "important to study and solve the underlying PDEs. An important family of PDEs\n",
+    "are the Navier-Stokes equations, which are a system of nonlinear partial\n",
+    "differential equations describing the motion of fluids. They are highly relevant\n",
+    "for scientific problems and engineering applications.\n",
+    "\n",
+    "Under certain conditions, the Navier-Stokes equations reduce to Burgers'\n",
+    "equation, a convection–diffusion equation describing phenomena occurring in\n",
+    "fluid dynamics, gas dynamics, and nonlinear acoustics, to name a few, by modeling\n",
+    "dissipative systems.\n",
+    "\n",
+    "The one-dimensional version of the equation depends on two variables:\n",
+    "$t \\in \\mathbb{R}_{\\geq 0}$ modeling the temporal dimension, $x \\in \\mathbb{R}$\n",
+    "representing the spatial dimension. The general form of the equation is called\n",
+    "the viscous Burgers' equation and reads:\n",
+    "\n",
+    "$$\\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} = \\nu \\frac{\\partial^2 u}{\\partial^2 x},$$\n",
+    "\n",
+    "where $u(x,t)$ is the fluid speed field at a given position $x$ and time $t$, and $\\nu$\n",
+    "is the viscosity of the fluid. Viscosity is an important property of a fluid\n",
+    "that measures its rate-dependent resistance to motion or deformation, and thus it\n",
+    "plays a crucial role in the determination of the dynamics of a fluid. When the\n",
+    "viscosity of the fluid is null ($\\nu$ = 0), the equation becomes a conservation\n",
+    "equation that can develop discontinuities (shock waves), due to the lack of its\n",
+    "internal resistance. In this case, the equation is called the inviscid Burgers'\n",
+    "equation and is a special case of nonlinear wave equation.\n",
+    "\n",
+    "Strictly speaking, inviscid flows do not occur in nature, but when modeling\n",
+    "aerodynamic flow, due to the infinitesimal effect of transport, using an\n",
+    "inviscid description of the problem can be useful. Surprisingly, more than\n",
+    "70% of aerodynamic theory deals with inviscid flows.\n",
+    "\n",
+    "In this tutorial we offer the inviscid Burgers' equation as a CFD example to solve\n",
+    "on IBM&reg; QPUs using QUICK-PDE, given by the equation:\n",
     "$$\\frac{\\partial u}{\\partial t} + u\\frac{\\partial u}{\\partial x} = 0, $$\n",
-    "where $u$ represents the fluid speed field.\n",
     "\n",
     "The initial condition for this problem is set to a linear function:\n",
-    "$$u(t=0,x) = ax + b,\\text{ with }a,b\\in\\mathbb{R}$$"
+    "$$u(t=0,x) = ax + b,\\text{ with }a,b\\in\\mathbb{R}$$\n",
+    "where $a$ and $b$ are arbitrary constants influencing the shape of the\n",
+    "solution. You can adjust $a$ and $b$ and see how they influence the\n",
+    "solving process and the solution."
    ]
   },
   {
