--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -1067,7 +1067,7 @@
    "source": [
     "## Changelog\n",
     "\n",
-    "#### 4th June 2025\n",
+    "### 4 June 2025\n",
     "- Upgraded `QuantumEnhancedEnsembleClassifier` with the following updates:\n",
     "  - Added onsite/alpha regularization. You can specify `regularization_type` to be `onsite` or `alpha`\n",
     "  - Added auto-regularization. You can set `regularization` to `auto` to use auto-regularization\n",
@@ -1075,19 +1075,19 @@
     "  - Improved overall performance\n",
     "- Added detailed status tracking for running jobs\n",
     "\n",
-    "#### 20th May 2025\n",
+    "### 20 May 2025\n",
     "- Standardized error handling\n",
     "\n",
-    "#### 18th March 2025\n",
+    "### 18 March 2025\n",
     "- Upgraded qiskit-serverless to 0.20.0 and base image to 0.20.1\n",
     "\n",
-    "#### 14th February 2025\n",
+    "### 14 February 2025\n",
     "- Upgraded base image to 0.19.1\n",
     "\n",
-    "#### 6th February 2025\n",
+    "### 6 February 2025\n",
     "- Upgraded qiskit-serverless to 0.19.0 and base image to 0.19.0\n",
     "\n",
-    "#### 13th November 2024\n",
+    "### 13 November 2024\n",
     "- Release of Singularity Machine Learning - Classification\n",
     "\n",
     "## Get support\n",
