--- a/docs/guides/DAG-representation.ipynb
+++ b/docs/guides/DAG-representation.ipynb
@@ -343,7 +343,10 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+     "title: Work with DAGs in transpiler passes",
+    "description: How to use Directed Acyclic Graphs (DAGs) to analyze and transform quantum circuits in Qiskit transpiler passes",
+    },
  "nbformat": 4,
  "nbformat_minor": 5
 }
