--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -266,6 +266,12 @@ Improvements include the following:
 <span id="latest-qiskit-functions"></span>
 ## Qiskit Functions
 
+**4 June 2025**
+
+- New updates
+
+  - Documentation for Singularity Machine Learning - Classification has been updated - view the [Changelog](/docs/guides/multiverse-computing-singularity#changelog).
+
 **16 May 2025**
 
 - Over the coming weeks, every function will give detailed information to help you run, debug, and analyze your workflows. This includes:
@@ -368,12 +374,6 @@ To get started, explore the [Qiskit Functions documentation.](/docs/guides/funct
 {/* Copy over the latest "What's new in the docs" announcement */}
 
 IBM Quantum documentation recently added a number of user-facing improvements, including content updates and new features. Many of these changes are a result of specific user requests! Check out the highlights below.
-
-**4 June 2025**
-
-- New updates
-
-  - Singularity Machine Learning - Classification
 
 **18 December 2024**
 
