--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8b4a21be-6871-4ae4-bc0e-dee65dd86cd2",
+   "id": "95773b45-4aca-44f2-924b-253f63cee7fa",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "670a4337-f014-4319-b9c0-1ca9f251d17d",
+   "id": "d35cee21-db7c-4641-83e4-c82ec7b45135",
    "metadata": {
     "tags": [
      "version-info"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e47193d-d728-4380-8bab-0ca96748f3c5",
+   "id": "3db39b65-9b57-46e1-8829-848de1debb56",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abb06c43-f2c1-479b-9897-feff83336a22",
+   "id": "f8e35982-38b5-4de1-b008-518aadc6ee81",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e49a5549-8697-4db4-b68d-7f698ef75f26",
+   "id": "4fd7473e-146f-48a3-9330-de76d6be02a0",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a9d70e47-b52a-4d85-ad02-349079418d7c",
+   "execution_count": 1,
+   "id": "ab17b0f3-b2ef-4c5f-bce3-76273446a95d",
    "metadata": {
     "scrolled": false
    },
@@ -86,12 +86,10 @@
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_torino')>]"
+       "[<IBMBackend('ibm_brisbane')>, <IBMBackend('ibm_sherbrooke')>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,18 +98,14 @@
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(\n",
-    "    channel=\"ibm_cloud\",\n",
-    "    token=\"MY_IBM_CLOUD_API_KEY\",\n",
-    "    instance=\"MY_IBM_CLOUD_CRN\",\n",
-    ")\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
     "\n",
     "service.backends()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f662e5f6-7777-44be-a0fd-05b6d359bcdf",
+   "id": "9d5d3dfc-04ef-4786-b478-362c7f5a33f2",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -119,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c1a0109f-474b-4c23-9d6e-e2049d331092",
+   "execution_count": 2,
+   "id": "f63fcc81-b92b-4d05-ab00-e57fa4791f12",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +123,7 @@
        "<IBMBackend('ibm_brisbane')>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "783d04b0-4b4e-471b-b3ec-e55a9bd8654e",
+   "id": "ebe4d781-362e-470e-844e-bfbae621cfc9",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -156,19 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c6770315-bb8a-4792-8362-c5b5ce6bec35",
+   "execution_count": 3,
+   "id": "ef040a7d-f245-495e-a2ef-1fda69c78ba9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_torino')>]"
+       "[<IBMBackend('ibm_brisbane')>, <IBMBackend('ibm_sherbrooke')>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9748b05-90a4-497c-bc45-ce4651aa876a",
+   "id": "b5c9174e-c4a0-4a3a-8ead-c9738e6681fb",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -187,17 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9c0629d0-c744-463d-94af-98dab6c34a6a",
+   "execution_count": 4,
+   "id": "6d35d7fe-7503-4b7a-b3f7-c8816b029253",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<IBMBackend('ibm_torino')>"
+       "<IBMBackend('ibm_brisbane')>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92bf3922-74d0-43af-bc49-f84318339675",
+   "id": "a59d71ce-c7fe-4590-8384-8465a1da4ee9",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -220,8 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f2043f87-7ba8-4e05-8cfd-5abb97ec7988",
+   "execution_count": 5,
+   "id": "44e4c978-374c-4b68-9f83-da84423ecae4",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32279902-9d7e-4c1b-953d-dd1fe596e312",
+   "id": "6553364b-6115-419e-9bbe-5b719097cd15",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae167f44-7e07-490c-a7f4-9e8f4757162b",
+   "id": "0894bfbe-e8c6-4a8e-8c9b-3a4ccf5b6fc0",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -287,17 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ad072ccd-4a8e-4c14-8320-dde9c7ac9767",
+   "execution_count": 6,
+   "id": "1f6dc981-cf88-4b10-9e45-5b42afbdac6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "QubitProperties(t1=0.00036258161999010196, t2=0.0005332636140726519, frequency=4736289915.805671)"
+       "QubitProperties(t1=0.000373804819308844, t2=0.00035501732926633675, frequency=4736289915.805671)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,32 +301,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ea7dfcfc-2f64-4776-b28c-88b6d9c30ff0",
+   "execution_count": 7,
+   "id": "66d67ea5-5f50-4eea-a9b7-1ddc6293e844",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'T1': (0.00046168091503285706,\n",
-       "  datetime.datetime(2025, 6, 3, 4, 59, 56, tzinfo=tzlocal())),\n",
-       " 'T2': (0.00034456369010628444,\n",
-       "  datetime.datetime(2025, 6, 3, 4, 59, 56, tzinfo=tzlocal())),\n",
+       "{'T1': (0.0005462183129681861,\n",
+       "  datetime.datetime(2025, 6, 4, 18, 41, 14, tzinfo=tzlocal())),\n",
+       " 'T2': (0.0003767959201654903,\n",
+       "  datetime.datetime(2025, 6, 4, 18, 41, 14, tzinfo=tzlocal())),\n",
        " 'frequency': (4635659902.192823,\n",
-       "  datetime.datetime(2025, 6, 3, 6, 24, 16, tzinfo=tzlocal())),\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
        " 'anharmonicity': (-313276039.4092362,\n",
-       "  datetime.datetime(2025, 6, 3, 6, 24, 16, tzinfo=tzlocal())),\n",
-       " 'readout_error': (0.005126953125,\n",
-       "  datetime.datetime(2025, 6, 3, 6, 24, 16, tzinfo=tzlocal())),\n",
-       " 'prob_meas0_prep1': (0.0048828125,\n",
-       "  datetime.datetime(2025, 6, 3, 6, 24, 16, tzinfo=tzlocal())),\n",
-       " 'prob_meas1_prep0': (0.00537109375,\n",
-       "  datetime.datetime(2025, 6, 3, 6, 24, 16, tzinfo=tzlocal())),\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'readout_error': (0.005615234375,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'prob_meas0_prep1': (0.0068359375,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'prob_meas1_prep0': (0.00439453125,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
        " 'readout_length': (1.216e-06,\n",
-       "  datetime.datetime(2025, 6, 3, 6, 24, 16, tzinfo=tzlocal()))}"
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal()))}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5db6737c-5bf5-4c6e-97f9-3564ee0feba3",
+   "execution_count": 8,
+   "id": "c112bba3-719a-443c-9e79-ccb955229055",
    "metadata": {},
    "outputs": [
     {
@@ -355,13 +347,13 @@
      "output_type": "stream",
      "text": [
       "Qubit 126 Properties:\n",
-      "  T1: 0.00036468477794204357 seconds\n",
-      "  T2: 0.0001234922602591064 seconds\n",
+      "  T1: 0.0003018540542473072 seconds\n",
+      "  T2: 9.515509303172122e-05 seconds\n",
       "  Frequency: 4831245145.564327 Hz\n",
       "  Anharmonicity: -309300543.2479466 Hz\n",
-      "  Readout Error: 0.025390625\n",
-      "  P(0 | 1): 0.02197265625\n",
-      "  P(1 | 0): 0.02880859375\n",
+      "  Readout Error: 0.01416015625\n",
+      "  P(0 | 1): 0.0166015625\n",
+      "  P(1 | 0): 0.01171875\n",
       "  Readout Length: 1.216e-06 seconds\n"
      ]
     }
@@ -394,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e230d5e2-7ae2-48e8-9995-c4628f4ae1b0",
+   "id": "c1c19258-c2e9-44bf-877c-e2524e755b1a",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -404,17 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f869dfee-6b49-46fd-b787-0ecea9021165",
+   "execution_count": 9,
+   "id": "6a1d1d34-1c42-4b27-9038-b7bc210ea3b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=5.333333333333332e-07, error=0.008516297999112105)"
+       "InstructionProperties(duration=5.333333333333332e-07, error=0.006190706171161048)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03872139-8751-42ad-8877-8dcb350b4a9f",
+   "id": "1db6f101-7f4e-4dec-9816-7a03960be988",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -433,17 +425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "56a7f685-6e78-4fb3-9161-c68e3f45dd68",
+   "execution_count": 10,
+   "id": "c1125d67-1278-4f00-adaa-32028c0a9610",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=1.216e-06, error=0.005126953125)"
+       "InstructionProperties(duration=1.216e-06, error=0.005615234375)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f76b0ea-c3fd-492a-9326-d417966e28d4",
+   "id": "c90decc4-501e-47ce-8d6d-8eea3390198f",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -483,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3"
   },
   "title": "Get backend information with Qiskit"
  },
