--- a/docs/guides/DAG-representation.ipynb
+++ b/docs/guides/DAG-representation.ipynb
@@ -345,9 +345,9 @@
   }
  ],
  "metadata": {
-     "title": "Work with DAGs in transpiler passes",
-    "description": "How to use Directed Acyclic Graphs (DAGs) to analyze and transform quantum circuits in Qiskit transpiler passes",
-    },
+  "title": "Work with DAGs in transpiler passes",
+  "description": "How to use Directed Acyclic Graphs (DAGs) to analyze and transform quantum circuits in Qiskit transpiler passes"
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
