--- a/docs/tutorials/repetition-codes.ipynb
+++ b/docs/tutorials/repetition-codes.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "num_qubits = 5\n",
     "backend = service.least_busy(\n",
-    "    operational=True, simulator=False, min_num_qubits=num_qubits\n",
+    "    operational=True, simulator=False, min_num_qubits=num_qubits, dynamic_circuits=True\n",
     ")\n",
     "backend"
    ]
