--- a/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
+++ b/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
@@ -136,7 +136,7 @@
    "id": "68c00476",
    "metadata": {},
    "source": [
-    "![swaps-2.png](https://learning-api.quantum.ibm.com/assets/ce74853a-8e5b-460b-9dc6-69eeadca2d05)"
+    "![swaps.png](/docs/images/tutorials/depth-reduction-with-circuit-cutting/swaps.avif)"
    ]
   },
   {
