--- a/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
+++ b/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
@@ -136,7 +136,7 @@
    "id": "68c00476",
    "metadata": {},
    "source": [
-    "![swaps.png](/docs/images/tutorials/depth-reduction-with-circuit-cutting/swaps.avif)"
+    "![Coupling map showing the qubits that will need to be swapped](/docs/images/tutorials/depth-reduction-with-circuit-cutting/swaps.avif)"
    ]
   },
   {
