--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 # Latest updates
 
-*Last updated 4 June 2025*
+*Last updated 5 June 2025*
 
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
@@ -29,16 +29,21 @@ Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiski
 
 This section summarizes the recent enhancements and new features for the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)
 
+- Added Instance Job Filter: The platform now displays only your workloads by default. On the dashboard, you will see only the latest workloads you have submitted to instances within your account.
+- A new provider release, featuring:
+  - Support for private jobs
+  - A new channel for the platform that makes instance selection optional
+  See the [Runtime Client v0.40.0](#latest-qiskit-runtime) section for more information. {/* When next Runtime release overwrites the .40 section below, remove this link and replace with direct link to release notes */}
+
+<details>
+<summary><b>Previous updates</b></summary>
+
 **8 May 2025**
 
 - [Flex Plan](https://www.ibm.com/quantum/blog/flex-plan), a new resource consumption offering, has been released.
 - [Tutorials](/docs/tutorials) are now available on the platform to help users with use-case exploration.
 - The [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions) has launched on the platform.
 - Updated Session OpenAPI schema: `backend_name` field is now nullable.
-
-
-<details>
-<summary><b>Previous updates</b></summary>
 
 **24 April 2025**
 
