--- a/docs/guides/primitives-rest-api.ipynb
+++ b/docs/guides/primitives-rest-api.ipynb
@@ -848,7 +848,7 @@
     "from qiskit import transpile\n",
     "\n",
     "service = QiskitRuntimeService(channel='ibm_quantum')\n",
-    "backend = service.backend(\"<your selected backend>\")\n",
+    "backend = service.backend(\"<SPECIFY BACKEND>\")\n",
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "\n",
